# aws-sqs-playground

./: .gitignore  CHANGELOG  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
scripts/: receive_msg.py  send_msg.py
terraform/: main.tf
