[tool.poetry]
name = "aws-sqs-playground"
version = "1.0.1"
description = "AWS SQS Playground"
authors = ["Rob Charlwood <rob@bitniftee.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
boto3 = "^1.12.49"

[tool.poetry.dev-dependencies]
black = "^19.10b0"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
